# ahriuwu

./: .gitignore  C:\Users\daniz\replay_pipeline.bat  CLAUDE.md  DREAMERV4_AUDIT.md  PROGRESS.md  README.md  audit_agent_finetune.py  lol_agent_project_spec.md  package-lock.json  pyproject.toml  slurm_tok_train.sbatch
code_review/: scale1_diffusion_equations.md  scale1_shortcut_forcing.md  scale1_training_math.md  scale2_architecture.md  scale2_attention.md  scale3_bugs.md  scale4_integration.md  summary.md
docs/: CODE_REVIEW_PHASE2.md  PREEMPTION.md  QUICK_START_CLICK_TEST.md  click_detection_test_guide.md  dynamics_predictions.md  hacker_logs.md  progress_log.md  replay_movement_extraction.md
eval_results/: metrics.json
experiments/: README.md  registry.json
lab_notebook/: EXPERIMENTS_AND_ROADMAP.md  PRE_FLIGHT_CHECKLIST.md  PROGRESS_LOG.md  README.md
scripts/: README.md  aimanager_diag.py  aimanager_probe_16_8.py  aimgr_disasm.py  aimgr_find_real.py  aimgr_offset_scan.py  anchors_16_7.json  auto_login.py  benchmark_inference.py  boot_windows_vanguard.sh  build_labels.py  build_manifest.py  calibrate_hud_regions.py  calibrate_projection.py  check_temporal_alignment.py  compare_detection_methods.py  compare_tokenizers.py  convert_npz_to_pt.py  create_overlay_video.py  debug_tau_live.py  decode_replay_movement.py  diagnose_transformer.py  download_one_replay.py  download_replays.py  download_youtube.py  download_yt_frames.py  emulator_v2.py  eval_dynamics.py  eval_dynamics_per_frame_psnr.py  eval_rollout_variants.py  eval_tokenizer.py  eval_trade_prediction.py  (+79 more)
(+198 files in other folders)
