[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ahriuwu"
version = "0.1.0"
description = "LoL autonomous agent using DreamerV4-style world model"
readme = "lol_agent_project_spec.md"
requires-python = ">=3.10"
dependencies = [
    "yt-dlp>=2024.1.0",
    "opencv-python>=4.8.0",
    "easyocr>=1.7.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "ffmpeg-python>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ahriuwu"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
